<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bluebBg"
    tools:context=".activity.PictureVerifyActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <ImageView
                    android:id="@+id/imageVerif"
                    android:layout_width="297dp"
                    android:layout_height="308dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/imagefin"
                    android:src="@mipmap/ic_launcher"
                    app:srcCompat="@android:drawable/ic_menu_report_image" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="195dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center" />

            </FrameLayout>

            <Button
                android:id="@+id/btnValide"
                style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Secondary"
                android:layout_width="172dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:backgroundTint="@color/blueBtn"
                android:fontFamily="@font/poppins_regular"
                android:shadowColor="#292626"
                android:text="@string/valider"
                android:textAlignment="center"
                android:textColor="@color/fontColor"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="normal" />

            <Button
                android:id="@+id/btnCancel"
                style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Secondary"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:backgroundTint="@color/blueBtn"
                android:fontFamily="@font/poppins_regular"
                android:shadowColor="#292626"
                android:text="@string/recomencer"
                android:textAlignment="center"
                android:textColor="@color/fontColor"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="normal" />
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/frameLayout8"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:accessibilityHeading="false"
            android:src="@drawable/footer" />

        <ImageButton
            android:id="@+id/boutonHelp"
            style="@android:style/Widget.ImageButton"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:background="#00FFFFFF"
            android:contentDescription="@string/boutonHelp"
            app:srcCompat="@drawable/_11758_help_icon" />

        <ImageButton
            android:id="@+id/boutonReturn"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:background="#00FFFFFF"
            android:contentDescription="@string/boutonExit"
            android:src="@drawable/_52473_return_icon" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout7"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/header2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/header" />

        <TextView
            android:id="@+id/titrePhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeMinTextSize="24sp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/titrePhoto"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/fontColor"
            android:textStyle="bold" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>