<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bluebBg"
    tools:context=".activity.HelpActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2"
        app:layout_constraintVertical_bias="0.0">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:paddingTop="60dp"
            android:paddingBottom="60dp">

            <ImageView
                android:id="@+id/surfaceView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:src="@drawable/round" />

            <TextView
                android:id="@+id/textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:autoSizeTextType="uniform"
                android:autofillHints=""
                android:fontFamily="@font/poppins_regular"
                android:inputType="textMultiLine"
                android:paddingLeft="60dp"
                android:paddingTop="30dp"
                android:paddingRight="60dp"
                android:paddingBottom="30dp"
                android:text="@string/textHelp"
                android:textColor="@color/fontColor" />

        </FrameLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:accessibilityHeading="false"
            android:src="@drawable/footer" />

        <ImageButton
            android:id="@+id/boutonHelp"
            style="@android:style/Widget.ImageButton"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:background="#00FFFFFF"
            android:contentDescription="@string/boutonHelp"
            app:srcCompat="@drawable/_11758_help_icon" />

        <ImageButton
            android:id="@+id/boutonReturn"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="#00FFFFFF"
            android:contentDescription="@string/boutonExit"
            android:src="@drawable/_52473_return_icon" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/header2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/header" />

        <TextView
            android:id="@+id/titreHelp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeMinTextSize="24sp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/titreHelp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/fontColor"
            android:textStyle="bold" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>