<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bluebBg"
    tools:context=".PictureActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="80dp"
        android:paddingBottom="80dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/surfaceView"
                    android:layout_width="345dp"
                    android:layout_height="336dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/round" />

                <TextView
                    android:id="@+id/textMultiLine"
                    android:layout_width="345dp"
                    android:layout_height="338dp"
                    android:layout_gravity="center"
                    android:autoSizeTextType="uniform"
                    android:autofillHints=""
                    android:fontFamily="@font/poppins_regular"
                    android:inputType="text|textMultiLine"
                    android:padding="20dp"
                    android:text="@string/textPic"
                    android:textColor="@color/fontColor" />
            </FrameLayout>

            <Button
                android:id="@+id/btnOpenPicture"
                style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Secondary"
                android:layout_width="343dp"
                android:layout_height="65dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:backgroundTint="@color/blueBtn"
                android:fontFamily="@font/poppins_regular"
                android:shadowColor="#292626"
                android:text="Selectionner une photo"
                android:textAlignment="center"
                android:textColor="@color/fontColor"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="normal" />

            <Button
                android:id="@+id/btnTakePicture"
                style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Secondary"
                android:layout_width="295dp"
                android:layout_height="67dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:backgroundTint="@color/blueBtn"
                android:fontFamily="@font/poppins_regular"
                android:shadowColor="#292626"
                android:text="Prendre une photo"
                android:textAlignment="center"
                android:textColor="@color/fontColor"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="normal" />
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/frameLayout5"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/header2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/header" />

        <TextView
            android:id="@+id/titrePickRobots"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeMinTextSize="24sp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/titrePhoto"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/fontColor"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout6"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:accessibilityHeading="false"
            android:src="@drawable/footer" />

        <ImageButton
            android:id="@+id/boutonHelp"
            style="@android:style/Widget.ImageButton"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:background="#00FFFFFF"
            android:contentDescription="@string/boutonHelp"
            app:srcCompat="@drawable/_11758_help_icon" />

        <ImageButton
            android:id="@+id/boutonReturn"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:background="#00FFFFFF"
            android:contentDescription="@string/boutonExit"
            android:src="@drawable/_52473_return_icon" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>